delete, get all handlers
